# chess-competition

./: CMakeLists.txt
.github/workflows/: build-wasm.yml
competition/: build-bots.sh
competition/scripts/: fetch_forks.py  manifest.py  parse_forks.py
competition/web/src/: App.css  App.tsx
competition/web/src/components/: GameControls.tsx  MoveHistory.tsx
competition/web/src/lib/: game-engine.ts  types.ts
